[package]
name = "wpilib-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]
cxx = "1.0.78"
autocxx = "0.26.0"


[build-dependencies]
async-std = "1.12.0"
wpilibcpp-build = { path = "../wpilibcpp-build" }
autocxx-build = "0.26.0"
thiserror = "1.0.56"
autocxx-engine = "0.26.0"
